<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
              android:icon="@drawable/ic_disciplina_black"
              android:title="@string/Home"
              android:checked="true"/>
        <item android:id="@+id/nav_ong"
              android:title="@string/ong"
              android:icon="@drawable/ic_forum_black" />
        <item android:id="@+id/nav_voluntario"
              android:title="@string/voluntario"
              android:icon="@drawable/ic_chat_black" />
        <item android:id="@+id/nav_about"
              android:title="@string/sobre"
              android:icon="@drawable/ic_adicionar_black" />
        <item android:id="@+id/action_logout"
              android:icon="@drawable/ic_configuracoes_white"
              android:title="@string/action_logout" />
    </group>
</menu>