<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="183dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo"/>

    <TextView
            android:text="@string/facalogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textColor="#000"
            android:id="@+id/textView3"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"/>

    <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:hint="@string/Nickname"/>

    <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText2"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:hint="@string/Password"/>
    <CheckBox
            android:id="@+id/checkBoxLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="Lembrar login"
    />
    <Button
            android:text="@string/login"
            android:layout_height="wrap_content"
            android:layout_width="220dp"
            android:background="#A94523"
            android:textColor="#fff"
            android:id="@+id/button"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"/>

</LinearLayout>