<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                        xmlns:app="http://schemas.android.com/apk/res-auto"
                                        xmlns:tools="http://schemas.android.com/tools"
                                        android:id="@+id/layourMenuLateral"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:fitsSystemWindows="true">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".TelaInicialActivity">

        <include layout="@layout/toolbar"/>
        <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="232dp"
                android:src="@drawable/red_panda"
                android:contentDescription="@string/logo"/>
        <TextView
                android:text="@string/bemvindo"
                android:layout_width="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="20dp"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:id="@+id/textView"/>
        <TextView
                android:text="@string/tipoOV"
                android:layout_width="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="20dp"
                android:layout_height="40dp"
                android:id="@+id/textView2"/>

        <LinearLayout android:layout_width="match_parent" android:layout_height="50dp">
            <Button
                    android:text="@string/voluntario"
                    android:layout_marginStart="50dp"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button3"
                    android:backgroundTint="#80D1836E"/>
            <Button
                    android:text="@string/ong2"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button2"
                    android:backgroundTint="#80D1836E"/>
        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
            android:id="@+id/menu_lateral"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/menu_lateral_cabecalho"
            app:menu="@menu/menu_lateral">


    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
