<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
                                        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/layourMenuLateral"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context=".TelaInicialActivity">

                <include layout="@layout/toolbar"/>
                <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="183dp"
                        android:src="@drawable/home2"
                        android:contentDescription="@string/logo"/>

                <TextView
                        android:text="@string/nossahistoria"
                        android:layout_width="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="20dp"
                        android:layout_height="20dp"
                        android:id="@+id/textView1"
                        android:textStyle="bold"/>
                <TextView
                        android:text="@string/ABOUT"
                        android:layout_width="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_gravity="center"
                        android:layout_height="100dp"
                        android:id="@+id/textView"/>
                <TextView
                        android:text="@string/nossamissao"
                        android:layout_width="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_gravity="center"
                        android:layout_height="20dp"
                        android:id="@+id/textView2"
                        android:textStyle="bold"/>
                <TextView
                        android:text="@string/ABOUT2"
                        android:layout_width="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_gravity="center"
                        android:layout_height="150dp"
                        android:id="@+id/textView3"/>

            </LinearLayout>

            <android.support.design.widget.NavigationView
                    android:id="@+id/menu_lateral"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:fitsSystemWindows="true"
                    app:headerLayout="@layout/menu_lateral_cabecalho"
                    app:menu="@menu/menu_lateral">


            </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
